Bug 97557 - [IVB] [IGT] gem_sync/forked-render sporadic missed interrupt
Summary: [IVB] [IGT] gem_sync/forked-render sporadic missed interrupt
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: PatchMerged
Keywords:
: 101719 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-09-01 02:04 UTC by Luis Botello
Modified: 2017-07-26 20:08 UTC (History)
2 users (show)

See Also:
i915 platform: IVB
i915 features: display/DP


Attachments
dmesg (6.48 KB, text/plain)
2016-09-01 02:04 UTC, Luis Botello
no flags Details
IGTuotput (1.54 KB, text/plain)
2016-09-01 02:04 UTC, Luis Botello
no flags Details

Description Luis Botello 2016-09-01 02:04:08 UTC
Created attachment 126154 [details]
dmesg

Description:
======================================
gem_exec_flus/batch* tests fail due to Failed assertion: intel_detect_and_clear_missed_interrupts(fd) == 0

Steps to reproduce:
======================================
#./gem_sync --run-subtest forked-default
#./gem_sync --run-subtest forked-render

Software Configuration:
======================================
Bios: BH7710H.86A.0096.2012.1012.1645
Linux distribution: Ubuntu 16.04 64 bits
Kernel: 4.8.0-rc4 f4f46e5 from http://cgit.freedesktop.org/drm-intel/
{color:grey} commit f4f46e5544894b2198cdfd5a226ee587d9834cc4}}
 Author: Daniel Vetter <daniel.vetter@ffwll.ch>
 Date:   Mon Aug 29 16:09:42 2016 +0200
 drm-intel-nightly: 2016y-08m-29d-14h-09m-23s UTC integration manifest{color}
ibdrm-2.4.70-2 b214b05 from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-11.2.2 3a9f628from git://anongit.freedesktop.org/mesa/mesa
cairo 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
xorg-server-1.18.0-535 25e4f9e from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel 2.99.917-698 71d3273 from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva-1.7.0-47 2ebf897 from git://git.freedesktop.org/git/vaapi/libva 
vaapi-intel-driver: 1.7.0-95 1817bee from git://git.freedesktop.org/git/vaapi/intel-driver
Intel-Gpu-Tools 1.15 572a770 from http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git


Hardware Configuration:
======================================
Platform: IVB
CPU: Intel(R) Core(TM) i7-3770K CPU @ 3.50GHz (Family 6, Model 58, Stepping 9)
Motherboard version: DH77EB
GPU: Intel® HD Graphics 4000 - Xeon E3-1200 v2/3rd Gen Core processor Graphics Controller

Attachments
======================================
Please see the attached files:
IGToutput
dmesg
Comment 1 Luis Botello 2016-09-01 02:04:43 UTC
Created attachment 126155 [details]
IGTuotput
Comment 2 Chris Wilson 2016-09-01 08:21:10 UTC
(In reply to Luis Botello from comment #0)
> Description:
> ======================================
> gem_exec_flus/batch* tests fail due to Failed assertion:
> intel_detect_and_clear_missed_interrupts(fd) == 0

This was meant to gem_sync *render!

In future can you include the next line after this assertion that shows which interrupts were missed (the actual values to the assertion that fail).
Comment 3 Chris Wilson 2016-09-01 08:32:18 UTC
*** Bug 97554 has been marked as a duplicate of this bug. ***
Comment 4 Chris Wilson 2016-09-01 08:33:21 UTC
What's the frequency of failure? (The gem_exec_flush batch will exercise the same behavior as gem_sync, just through a different path.)
Comment 5 Chris Wilson 2016-09-01 08:34:12 UTC
Do you have any other ivb with which to compare?
Comment 6 Luis Botello 2016-09-01 21:20:27 UTC
I tested over another IVB and the test failed 4 of 20 times with the same assertion failure.

Adding dmesg:
==================================================
[ 9137.965587] gem_sync: executing
[ 9137.965698] [drm:i915_gem_open]
[ 9137.966244] [drm:i915_gem_open]
[ 9137.966423] gem_sync: starting subtest forked-default
[ 9147.971833] gem_sync: exiting, ret=0
[ 9149.972035] gem_sync: executing
[ 9149.972154] [drm:i915_gem_open]
[ 9149.972697] [drm:i915_gem_open]
[ 9149.972949] gem_sync: starting subtest forked-default
[ 9159.981402] gem_sync: exiting, ret=0
[ 9162.323082] gem_sync: executing
[ 9162.323192] [drm:i915_gem_open]
[ 9162.323744] [drm:i915_gem_open]
[ 9162.323985] gem_sync: starting subtest forked-default
[ 9172.333606] gem_sync: exiting, ret=99

IGT output:
================================================
IGT-Version: 1.15-g572a770 (x86_64) (Linux: 4.8.0-rc4-drm-intel-nightly-ww36-commit-f4f46e5+ x86_64)
(gem_sync:9227) igt-core-DEBUG: Test requirement passed: !igt_run_in_simulation()
(gem_sync:9227) drmtest-DEBUG: Test requirement passed: !(fd<0)
Using Legacy submission , with semaphores
(gem_sync:9227) igt-core-DEBUG: Starting subtest: forked-default
(gem_sync:9227) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
Completed 424960 cycles: 23.542 us
Completed 872448 cycles: 11.464 us
Completed 1026048 cycles: 9.753 us
Completed 756736 cycles: 13.224 us
(gem_sync:9227) CRITICAL: Test assertion failure function sync_ring, file gem_sync.c:153:
(gem_sync:9227) CRITICAL: Failed assertion: intel_detect_and_clear_missed_interrupts(fd) == 0
(gem_sync:9227) CRITICAL: error: 1 != 0
Stack trace:
  #0 [__igt_fail_assert+0x101]
  #1 [sync_ring+0x306]
  #2 [__real_main722+0x5b6]
  #3 [main+0x23]
  #4 [__libc_start_main+0xf0]
  #5 [_start+0x29]
  #6 [<unknown>+0x29]
Subtest forked-default failed.
**** DEBUG ****
(gem_sync:9227) ioctl-wrappers-DEBUG: Test requirement passed: gem_has_ring(fd, ring)
(gem_sync:9227) CRITICAL: Test assertion failure function sync_ring, file gem_sync.c:153:
(gem_sync:9227) CRITICAL: Failed assertion: intel_detect_and_clear_missed_interrupts(fd) == 0
(gem_sync:9227) CRITICAL: error: 1 != 0
****  END  ****
Subtest forked-default: FAIL (10.010s)
(gem_sync:9227) igt-core-DEBUG: Exiting with status code 99
Comment 7 yann 2017-03-27 16:36:13 UTC
Luis, please re-test with Chris' patch: https://patchwork.freedesktop.org/series/21876/
Comment 8 Luis Botello 2017-07-06 21:28:21 UTC
(In reply to yann from comment #7)
> Luis, please re-test with Chris' patch:
> https://patchwork.freedesktop.org/series/21876/

With the patch provided, issue is not reproducible after 30 iterations.
Comment 9 Chris Wilson 2017-07-11 11:37:16 UTC
*** Bug 101719 has been marked as a duplicate of this bug. ***
Comment 10 Ricardo 2017-07-11 13:27:36 UTC
Chris let us know when patch is upstream and we will retest...
Comment 11 Hector Velazquez 2017-07-26 20:08:01 UTC
The following tests PASS on IVB with this configuration

Tests List:

igt@gem_sync@forked-render
igt@gem_sync@forked-default


This is my configuration:

====================================================
Graphic Stack
====================================================
Component: drm
    tag: libdrm-2.4.81-33-g3876bc2
    commit: 3876bc246a07070a6043159cd7623d4def9bbd4c

Component: cairo
    tag: 1.15.6-2-g57b4050
    commit: 57b40507dda3f58dfc8635548d606b86dc7bcf51

Component: intel-gpu-tools
    tag: intel-gpu-tools-1.19-112-g493151b
    commit: 493151b0768aa4ca535cef49cb7efa174a9c3a77

Component: piglit
    tag: piglit-v1
    commit: 973892687cf5c2f8e2dbe1d22998b82736643787

======================================
             Hardware
======================================
==============================================================
Essentials
==============================================================
Processor Number			i5-3330
Status					Launched
Launch Date				Q3'12
Lithography				22 nm


==============================================================
Performance
==============================================================
# of Cores				4
# of Threads				4
Processor Base Frequency		3.00 GHz
Max Turbo Frequency			3.20 GHz
Cache					6 MB SmartCache
Bus Speed				5 GT/s DMI
TDP					77 W

==============================================================
Memory Specifications
==============================================================
Max Memory Size 			32 GB
Memory Types				DDR3 1333/1600
Max # of Memory Channels		2
Max Memory Bandwidth			25.6 GB/s
ECC Memory Supported  			No

==============================================================
Graphics Specifications
==============================================================
Processor Graphics 			Intel® HD Graphics 2500
Graphics Base Frequency			650.00 MHz
Graphics Max Dynamic Frequency		1.05 GHz
Intel® Quick Sync Video 		Yes
Intel® InTru™ 3D Technology		Yes
Intel® Wireless Display 		Yes
Intel® Flexible Display Interface 	Yes
Intel® Clear Video HD Technology	Yes
# of Displays Supported 		3
Device ID				0x152




Note: Closing this BUG since test is shown as PASSED...


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.